--- a/src/Home/components/NavBar.css
+++ b/src/Home/components/NavBar.css
@@ -106,6 +106,10 @@
         margin: 0;
         font-size: 2rem;
     }
+
+    .nav-toggle-switch {
+      display: none;
+    }
   }
 
   .nav-toggle-switch {
